Добавила музыку для страницы с подарком.

--- a/views/gift.pug
+++ b/views/gift.pug
@@ -6,6 +6,7 @@ html(lang="ru")
     link(type="text/css" rel="stylesheet" href="/stylesheets/gift.css")
 
   body
+    audio(controls src="/images/soundtrack.mp3")
     div.greetings
       p Здравствуй!
       img(src="/images/greetings.gif")
@@ -50,4 +51,5 @@ html(lang="ru")
 
     div.footer
       p Гифки взяты #[a(href="https://giphy.com/") отсюда]
-      p &copy LilChara 2020
+      p Музыка: Steve Adams - Dulcinea
+      p &copy; LilChara 2020
