Добавила надпись к саундтреку и изменила отступы у приветствия

--- a/views/gift.pug
+++ b/views/gift.pug
@@ -6,7 +6,9 @@ html(lang="ru")
     link(type="text/css" rel="stylesheet" href="/stylesheets/gift.css")
 
   body
-    audio(controls src="/images/soundtrack.mp3")
+    div.footer
+      audio(controls src="/images/soundtrack.mp3")
+      p Включи меня!
     div.greetings
       p Здравствуй!
       img(src="/images/greetings.gif")
