Мелкая правка текста

--- a/views/gift.pug
+++ b/views/gift.pug
@@ -22,7 +22,7 @@ html(lang="ru")
     div.main-block.back-trans
       h3 Немного об игре
       p Игра в жанре драма с элементами триллера "N-city" была создана на уже почившем сайте beon.ru. Таких, как мы, было много и мы не выделялись чем-то особенным в плане игровой механики, построения сюжета или критериев отбора. Наша особенность в другом, мы - одна команда, каждый член которой - важная часть коллектива и сюжета.
-      p Состав игроков время от времени менялся, но основной костяк был неизменным. Не смотря на то, что все мы уже взрослые люди, у которых есть работа, дом и семья, мы с удовольствием примеряем на себя роль персонажа, в которую вложили частичку себя, и заходим в игру, чтобы встретиться с теми, кто дорог сердцу.
+      p Состав игроков время от времени менялся, но основной костяк был неизменным. Не смотря на то, что все мы уже взрослые люди, у которых есть работа, дом и семья, мы с удовольствием примеряем на себя роль персонажа, в которого вложили частичку себя, и заходим в игру, чтобы встретиться с теми, кто дорог сердцу.
       img(src="/images/friends.gif")
 
     div.main-block.back-trans
