Добавила названия вкладок

--- a/views/gift.pug
+++ b/views/gift.pug
@@ -4,6 +4,7 @@ html(lang="ru")
     meta(charset="UTF-8")
     script(src='https://cdn.jsdelivr.net/npm/vue/dist/vue.js')
     link(type="text/css" rel="stylesheet" href="/stylesheets/gift.css")
+    title= "Привет!"
 
   body
     div.footer
