--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,7 @@ html(lang="ru")
     meta(charset="UTF-8")
     script(src='https://cdn.jsdelivr.net/npm/vue/dist/vue.js')
     link(type="text/css" rel="stylesheet" href="/stylesheets/style.css")
+    title= "Всё почти готово"
 
   body
 
@@ -13,7 +14,7 @@ html(lang="ru")
           h1 До вручения подарка:
           p {{theTime.days}}
           p :
-          p {{theTime.hours}}    
+          p {{theTime.hours}}
           p :
           p {{theTime.minutes}}
           p :
