--- a/views/index.pug
+++ b/views/index.pug
@@ -3,8 +3,8 @@ html(lang="ru")
   head
     meta(charset="UTF-8")
     script(src='https://cdn.jsdelivr.net/npm/vue/dist/vue.js')
-    link(type="text/css" rel="stylesheet" href="/stylesheets/gift.css")
-    title= "Лаборатория "Н""
+    link(type="text/css" rel="stylesheet" href="/stylesheets/style.css")
+    title= "Всё почти готово"
 
   body
 
