--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ html(lang="ru")
   head
     meta(charset="UTF-8")
     script(src='https://cdn.jsdelivr.net/npm/vue/dist/vue.js')
-    link(type="text/css" rel="stylesheet" href="/stylesheets/style.css")
+    link(type="text/css" rel="stylesheet" href="/stylesheets/gift.css")
     title= "..."
 
   body
