И ещё изменения в оформление

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,6 +7,6 @@ html(lang="ru")
     title= "..."
 
   body
-    div
+    div.main-block.back-trans
       h3 #[a(href="http://ncitylab.com/gift") FAQ]
       h3 Анонсы
