--- a/views/index.pug
+++ b/views/index.pug
@@ -10,3 +10,6 @@ html(lang="ru")
     div.main-block.back-trans
       h3 #[a(href="http://ncitylab.com/gift") FAQ]
       h3 Анонсы
+      p Доработка FAQ :)
+      p Создание базы данных жителей города
+      p Создание учётных записей для работников лаборатории с базовым функционалом
