--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ html(lang="ru")
     meta(charset="UTF-8")
     script(src='https://cdn.jsdelivr.net/npm/vue/dist/vue.js')
     link(type="text/css" rel="stylesheet" href="/stylesheets/gift.css")
-    title= "Лаборатория "Н""
+    title= "Лаборатория Н"
 
   body
     div.main-block.back-trans
