Доработка страницы с ответами на вопросы.

--- a/public/stylesheets/faq.css
+++ b/public/stylesheets/faq.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Roboto Slab; /* Имя шрифта */
-  src: url(../stylesheets/gift-font.ttf); /* Путь к файлу со шрифтом */
+  src: url(../stylesheets/faq-font.ttf); /* Путь к файлу со шрифтом */
 }
 
 html {
