--- a/views/index.pug
+++ b/views/index.pug
@@ -3,12 +3,12 @@ html(lang="ru")
   head
     meta(charset="UTF-8")
     script(src='https://cdn.jsdelivr.net/npm/vue/dist/vue.js')
-    link(type="text/css" rel="stylesheet" href="/stylesheets/gift.css")
+    link(type="text/css" rel="stylesheet" href="/stylesheets/faq.css")
     title= "Лаборатория Н"
 
   body
     div.main-block.back-trans
-      h3 #[a(href="http://ncitylab.com/gift") FAQ]
+      h3 #[a(href="http://ncitylab.com/faq") FAQ]
       h3 Анонсы
       p 1. Доработка FAQ :)
       p 2. Создание базы данных жителей города
