Доработка страницы faq.

--- a/views/faq.pug
+++ b/views/faq.pug
@@ -3,7 +3,7 @@ html(lang="ru")
   head
     meta(charset="UTF-8")
     script(src='https://cdn.jsdelivr.net/npm/vue/dist/vue.js')
-    link(type="text/css" rel="stylesheet" href="/stylesheets/gift.css")
+    link(type="text/css" rel="stylesheet" href="/stylesheets/faq.css")
     title= "Привет!"
 
   body
@@ -29,7 +29,6 @@ html(lang="ru")
       p Во-вторых, зайти в сообщество с нашей игрой #[a(href="http://ncity.beon.fun/") N-city] и подать анкету в личные сообщения #[a(href="http://lilchara.beon.fun/") мне].
       p В-третьих, немного подождать, а после пообщаться со мной :)
       p Вуаля, вы великолепны!
-      img(src="/images/awesome.gif")
 
     div.footer
       p &copy; LilChara 2020
