Добавлена ссылка "на главную".

--- a/views/faq.pug
+++ b/views/faq.pug
@@ -10,6 +10,9 @@ html(lang="ru")
     div.greetings
       p FAQ
 
+    div.main-block.back-transэ
+      p #[a(href="http://ncitylab.com") На главную]
+
     div.main-block.back-trans
       h3 "Что это за сайт?"
       p NCityLab - это сайт ролевого сообщества "N-city". В данный момент разрабатывается и готовится к запуску.
