--- a/views/faq.pug
+++ b/views/faq.pug
@@ -10,7 +10,7 @@ html(lang="ru")
     div.greetings
       p FAQ
 
-    div.main-block.back-transэ
+    div.main-block.back-trans
       p #[a(href="http://ncitylab.com") На главную]
 
     div.main-block.back-trans
