--- a/views/index.pug
+++ b/views/index.pug
@@ -10,6 +10,6 @@ html(lang="ru")
     div.main-block.back-trans
       h3 #[a(href="http://ncitylab.com/faq") FAQ]
       h3 Анонсы
-      p 1. Доработка FAQ :)
+      p.line-through 1. Доработка FAQ :)
       p 2. Создание базы данных жителей города
       p 3. Создание учётных записей для работников лаборатории с базовым функционалом
