--- a/views/index.pug
+++ b/views/index.pug
@@ -45,11 +45,4 @@ html(lang="ru")
             h1 #{message}
       a(href=0) Закрыть
 
-  = $('.hide-password').on('click', function(){
-    var $this= $(this),
-      $password_field = $this.prev('input');
-
-      ( 'password' == $password_field.attr('type') ) ? $password_field.attr('type', 'text') : $password_field.attr('type', 'password');
-      ( 'Hide' == $this.text() ) ? $this.text('Show') : $this.text('Hide');
-      $password_field.putCursorAtEnd();
-    });
+  script(src='/javascripts/modal.js')
