--- a/views/index.pug
+++ b/views/index.pug
@@ -16,8 +16,8 @@ html(lang="ru")
 
       div.login
         form( action='/login', method='POST')
-          input(type='text', name='username', placeholder='Email', required, autofocus)
-          input(type='password', name='password', placeholder='Password', required)
+          input(type='text', name='username', placeholder='Логин', required, autofocus)
+          input(type='password', name='password', placeholder='Пароль', required)
           button(type='submit') Sign in
           span.clearfix
           a(href='/signup') Create an account
@@ -27,9 +27,9 @@ html(lang="ru")
 
       div.signup
         form(class='form-signin', action='/signup', method='POST')
-          input(type='text', name='username', placeholder='Username', required, autofocus)
-          input(type='password', name='password', placeholder='Password', required)
-          input(type='email', name='email', placeholder='Email',required)
+          input(type='text', name='username', placeholder='Логин', required, autofocus)
+          input(type='password', name='password', placeholder='Пароль', required)
+          input(type='email', name='email', placeholder='E-mail',required)
           button(class='btn btn-lg btn-primary btn-block', type='submit') Register
           span.clearfix
       #message
