--- a/views/index.pug
+++ b/views/index.pug
@@ -20,7 +20,7 @@ html(lang="ru")
           input(type='password', name='password', placeholder='Пароль', required)
           button(type='submit') Войти
           span.clearfix
-          a(href='/signup') Create an account
+          a(href='/signup') Зарегистрироваться
       #message
         if message
           h1 #{message}
