Кнопочки для будущего модального окна.

--- a/views/index.pug
+++ b/views/index.pug
@@ -35,3 +35,6 @@ html(lang="ru")
       #message
         if message
           h1 #{message}
+
+      a(href=#) Войти
+      a(href=#) Зарегистрироваться
