--- a/views/index.pug
+++ b/views/index.pug
@@ -36,5 +36,5 @@ html(lang="ru")
         if message
           h1 #{message}
 
-      a(href=#) Войти
-      a(href=#) Зарегистрироваться
+      a(href=0) Войти
+      a(href=0) Зарегистрироваться
