Добавляем сами модальные окна.

--- a/views/index.pug
+++ b/views/index.pug
@@ -39,4 +39,10 @@ html(lang="ru")
       a(href=0) Войти
       a(href=0) Зарегистрироваться
 
+      div.modal(data-modal="1")
+        p.modal_title Войти
+
+      div.modal(data-modal="2")
+        p.modal_title Зарегистрироваться  
+
       #overlay-modal.overlay
