Допилили стили для модальных окон и подложки.

--- a/views/index.pug
+++ b/views/index.pug
@@ -36,13 +36,13 @@ html(lang="ru")
         if message
           h1 #{message}
 
-      a(href=0) Войти
-      a(href=0) Зарегистрироваться
+      a.modal(href=0) Войти
+      a.modal(href=0) Зарегистрироваться
 
       div.modal(data-modal="1")
         p.modal_title Войти
 
       div.modal(data-modal="2")
-        p.modal_title Зарегистрироваться  
+        p.modal_title Зарегистрироваться
 
       #overlay-modal.overlay
