--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="ru")
   head
     meta(charset="UTF-8")
-    script(src='https://cdn.jsdelivr.net/npm/vue/dist/vue.js')
+    script(src='js/jquery-3.5.1.min.js')
     link(type="text/css" rel="stylesheet" href="/stylesheets/faq.css")
     title= "Лаборатория Н"
 
@@ -46,3 +46,5 @@ html(lang="ru")
         p.modal_title Зарегистрироваться
 
       #overlay-modal.overlay
+
+    script(src='/javascripts/modal.js')
