И ЕЩЁ РАЗ ДОДЕЛЫВАЕМ

--- a/views/index.pug
+++ b/views/index.pug
@@ -45,6 +45,6 @@ html(lang="ru")
       div.modal(data-modal="2")
         p.modal_title Зарегистрироваться
 
-      #overlay-modal.overlay
+      div.overlay.js-modal.overlay
 
     script(src='/javascripts/modal.js')
