--- a/public/stylesheets/faq.css
+++ b/public/stylesheets/faq.css
@@ -103,3 +103,13 @@ h3 {
    opacity: 1;
    visibility: visible;
 }
+
+.modal__cross {
+   width: 15px;
+   height: 15px;
+   position: absolute;
+   top: 20px;
+   right: 20px;
+   fill: #444;
+   cursor: pointer;
+}
