--- a/views/index.pug
+++ b/views/index.pug
@@ -40,6 +40,7 @@ html(lang="ru")
       a.js-open-modal(href=0, data-modal="2") Зарегистрироваться
 
       div.modal(data-modal="1")
+        svg.modal__cross.js-modal-close(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z")
         p.modal_title Войти
         div.login
           form( action='/login', method='POST')
