--- a/public/stylesheets/faq.css
+++ b/public/stylesheets/faq.css
@@ -86,6 +86,12 @@ h3 {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 30;
+  box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2);
+  text-align: center;
+  padding: 30px;
+  border-radius: 3px;
+  background-color: #fff;
+  transition: 0.3s all;
 }
 
 .modal a {
