Меняем цвет фона модального окна.

--- a/public/stylesheets/faq.css
+++ b/public/stylesheets/faq.css
@@ -90,7 +90,7 @@ h3 {
   text-align: center;
   padding: 30px;
   border-radius: 3px;
-  background-color: #fff;
+  background-color: #aaa;
   transition: 0.3s all;
 }
 
