Снова поменяли кнопку.

--- a/views/index.pug
+++ b/views/index.pug
@@ -40,7 +40,7 @@ html(lang="ru")
       a.js-open-modal(href=0, data-modal="2") Зарегистрироваться
 
       div.modal(data-modal="1")
-        p.modal__cross.js-modal-close Текст
+        p.modal__cross.js-modal-close Закрыть
         p.modal_title Войти
         div.login
           form( action='/login', method='POST')
