--- a/views/index.pug
+++ b/views/index.pug
@@ -3,70 +3,43 @@ html(lang="ru")
   head
     meta(charset="UTF-8")
     script(src='js/jquery-3.5.1.min.js')
-    link(type="text/css" rel="stylesheet" href="/stylesheets/faq.css")
+    link(type="text/css" rel="stylesheet" href="/stylesheets/style.css")
     title= "Лаборатория Н"
 
   body
-    div.main-block.back-trans
-      h3 #[a(href="http://ncitylab.com/faq") FAQ]
-      h3 Анонсы
-      p.line-through 1. Доработка FAQ :)
-      p 2. Создание базы данных жителей города
-      p 3. Создание учётных записей для работников лаборатории с базовым функционалом
+    div.main-block
+      a.js-open-modal(href=0, data-modal="1") Войти
+      a.js-open-modal(href=0, data-modal="2") Зарегистрироваться
+      a.faq(href="http://ncitylab.com/faq") FAQ
 
+    div.modal(data-modal="1")
+      p.modal__cross.js-modal-close Закрыть
+      p.modal_title Войти?
       div.login
         form( action='/login', method='POST')
           input(type='text', name='username', placeholder='Логин', required, autofocus)
           input(type='password', name='password', placeholder='Пароль', required)
-          button(type='submit') Войти
+          button.js-open-modal.form(type='submit') Войти
           span.clearfix
-          a(href='/signup') Зарегистрироваться
+          a.js-open-modal.form(href=0, data-modal="2") Зарегистрироваться
       #message
         if message
           h1 #{message}
 
+    div.modal(data-modal="2")
+      p.modal__cross.js-modal-close Закрыть
+      p.modal_title Зарегистрироваться
       div.signup
         form(class='form-signin', action='/signup', method='POST')
           input(type='text', name='username', placeholder='Логин', required, autofocus)
           input(type='password', name='password', placeholder='Пароль', required)
           input(type='email', name='email', placeholder='E-mail',required)
-          button(class='btn btn-lg btn-primary btn-block', type='submit') Зарегистрироваться
+          button.js-open-modal.form(class='btn btn-lg btn-primary btn-block', type='submit') Зарегистрироваться
           span.clearfix
       #message
         if message
           h1 #{message}
 
-      a.js-open-modal(href=0, data-modal="1") Войти
-      a.js-open-modal(href=0, data-modal="2") Зарегистрироваться
-
-      div.modal(data-modal="1")
-        p.modal__cross.js-modal-close Закрыть
-        p.modal_title Войти
-        div.login
-          form( action='/login', method='POST')
-            input(type='text', name='username', placeholder='Логин', required, autofocus)
-            input(type='password', name='password', placeholder='Пароль', required)
-            button(type='submit') Войти
-            span.clearfix
-            a(href='/signup') Зарегистрироваться
-        #message
-          if message
-            h1 #{message}
-
-      div.modal(data-modal="2")
-        p.modal__cross.js-modal-close Закрыть
-        p.modal_title Зарегистрироваться
-        div.signup
-          form(class='form-signin', action='/signup', method='POST')
-            input(type='text', name='username', placeholder='Логин', required, autofocus)
-            input(type='password', name='password', placeholder='Пароль', required)
-            input(type='email', name='email', placeholder='E-mail',required)
-            button(class='btn btn-lg btn-primary btn-block', type='submit') Зарегистрироваться
-            span.clearfix
-        #message
-          if message
-            h1 #{message}
-
-      div.overlay.js-modal-overlay
+    div.overlay.js-overlay-modal
 
     script(src='/javascripts/modal.js')
