--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,55 +3,131 @@
   src: url(../stylesheets/timer-font.ttf); /* Путь к файлу со шрифтом */
 }
 
-body {
-  background-color: #000;
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-h1,
-h3,
-p {
-  color: #7A162D;
-  text-shadow: 0 0 60px #BD4964;
-  font-family: DigitallCG;
-
-}
-
-h1,
-h3 {
-  font-size: 80px;
-  text-align: center;
-}
-
-p {
-  font-size: 60px;
-  margin: 20px;
-  display: inline;
-  vertical-align: middle;
-  text-shadow: 0 0 50px #BD4964;
-}
-
-.flex {
-  width: 100%;
+html {
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #000;
+  color: #fff;
+  background-image: url('/images/backgroundblacksun.jpg');
+  background-position: center;
+  background-size: 1500px auto;
+  background-attachment: fixed;
+  font-family: DigitallCG;
+}
+
+h3 {
+  font-size: 50px;
+}
+
+input {
+  margin: 5px;
+}
+
+.main-block {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer {
+  font-size: 12px;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  color: #fff;
+}
+
+.overlay {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
   position: fixed;
   top: 0;
   left: 0;
-  display: flex;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-  overflow: auto;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .5);
+  z-index: 20;
+  transition: .3s all;
 }
 
-.timer {
-  margin: auto;
+.modal {
+  opacity: 0;
+  visibility: hidden;
+  width: 100%;
+  max-width: 500px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 30;
+  box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2);
   text-align: center;
+  padding: 30px;
+  border-radius: 3px;
+  background-color: #000;
+  transition: 0.3s all;
 }
 
-.box {
-  vertical-align: middle;
-  margin: auto;
-  text-align: center;
+.modal.active,
+.overlay.active{
+   opacity: 1;
+   visibility: visible;
+}
+
+.modal__cross {
+   position: absolute;
+   top: 20px;
+   right: 20px;
+   color: #fff;
+   cursor: pointer;
+}
+
+.js-open-modal {
+  padding: 10px;
+  display: inline-block;
+  text-decoration: none;
+  background-color: #000;
+  margin: 10px;
+  color: #fff;
+  border-radius: 3px;
+  font-size: 50px;
+}
+
+.faq {
+  padding: 10px;
+  display: inline-block;
+  text-decoration: none;
+  background-color: #000;
+  margin: 10px;
+  color: #fff;
+  border-radius: 3px;
+  font-size: 50px;
+}
+
+button {
+  font-family: DigitallCG;
+  box-shadow: none;
+  outline: none;
+  border: none;
+}
+
+.js-open-modal:hover {
+  background-color: #660000;
+  color: #000;
+}
+
+.js-open-modal.form {
+  font-size: 20px;
 }
