--- a/views/faq.pug
+++ b/views/faq.pug
@@ -2,36 +2,69 @@ doctype html
 html(lang="ru")
   head
     meta(charset="UTF-8")
-    script(src='https://cdn.jsdelivr.net/npm/vue/dist/vue.js')
     link(type="text/css" rel="stylesheet" href="/stylesheets/faq.css")
+    script(src='js/jquery-3.5.1.min.js')
     title= "Привет!"
 
   body
-    div.greetings
-      p FAQ
+    div.main-block
 
-    div.main-block.back-trans
-      p #[a(href="http://ncitylab.com") На главную]
+      div.menu
+        a.js-open-modal(href=0, data-modal="1") Войти
+        a.js-open-modal(href=0, data-modal="2") Зарегистрироваться
 
-    div.main-block.back-trans
-      h3 "Что это за сайт?"
-      p NCityLab - это сайт ролевого сообщества "N-city". В данный момент разрабатывается и готовится к запуску.
+      div.faq
 
-    div.main-block.back-trans
-      h3 Немного об игре
-      p Игра в жанре драма с элементами триллера "N-city" была создана на уже почившем сайте beon.ru. Таких, как мы, было много и мы не выделялись чем-то особенным в плане игровой механики, построения сюжета или критериев отбора. Наша особенность в другом, мы - одна команда, каждый член которой - важная часть коллектива и сюжета.
-      p Состав игроков время от времени менялся, но основной костяк был неизменным. Не смотря на то, что все мы уже взрослые люди, у которых есть работа, дом и семья, мы с удовольствием примеряем на себя роль персонажа, в которого вложили частичку себя, и заходим в игру, чтобы встретиться с теми, кто дорог сердцу.
+        h3 FAQ
 
-    div.main-block.back-trans
-      h3 "Когда примерно сайт будет готов?"
-      p Ответ на этот вопрос знает только Великий Китайский Рандом, однако спешу заверить, что первые изменения не за горами. Когда? Ответ в первом предложении :)
+        a.index(href="http://ncitylab.com") На главную
 
-    div.main-block.back-trans
-      h3 "Хочу к вам, что нужно сделать?"
-      p Во-первых, зарегистрироваться на сайте #[a(href="http://beon.fun") beon.fun], чтобы иметь возможность присоединиться к игре.
-      p Во-вторых, зайти в сообщество с нашей игрой #[a(href="http://ncity.beon.fun/") N-city] и подать анкету в личные сообщения #[a(href="http://lilchara.beon.fun/") мне].
-      p В-третьих, немного подождать, а после пообщаться со мной :)
-      p Вуаля, вы великолепны!
+        h3 "Что это за сайт?"
+        p NCityLab - это сайт ролевого сообщества "N-city". В данный момент разрабатывается и готовится к запуску.
 
-    div.footer
-      p &copy; LilChara 2020
+        h3 Немного об игре
+        p Игра в жанре драма с элементами триллера "N-city" была создана на уже почившем сайте beon.ru. Таких, как мы, было много и мы не выделялись чем-то особенным в плане игровой механики, построения сюжета или критериев отбора. Наша особенность в другом, мы - одна команда, каждый член которой - важная часть коллектива и сюжета.
+        p Состав игроков время от времени менялся, но основной костяк был неизменным. Не смотря на то, что все мы уже взрослые люди, у которых есть работа, дом и семья, мы с удовольствием примеряем на себя роль персонажа, в которого вложили частичку себя, и заходим в игру, чтобы встретиться с теми, кто дорог сердцу.
+
+        h3 "Когда примерно сайт будет готов?"
+        p Ответ на этот вопрос знает только Великий Китайский Рандом, однако спешу заверить, что первые изменения не за горами. Когда? Ответ в первом предложении :)
+
+        h3 "Хочу к вам, что нужно сделать?"
+        p Во-первых, зарегистрироваться на сайте #[a(href="http://beon.fun") beon.fun], чтобы иметь возможность присоединиться к игре.
+        p Во-вторых, зайти в сообщество с нашей игрой #[a(href="http://ncity.beon.fun/") N-city] и подать анкету в личные сообщения #[a(href="http://lilchara.beon.fun/") мне].
+        p В-третьих, немного подождать, а после пообщаться со мной :)
+        p Вуаля, вы великолепны!
+
+      div.modal(data-modal="1")
+        p.modal__cross.js-modal-close Закрыть
+        p.modal_title Войти?
+        div.login
+          form( action='/login', method='POST')
+            input(type='text', name='username', placeholder='Логин', required, autofocus)
+            input(type='password', name='password', placeholder='Пароль', required)
+            button.js-open-modal.form(type='submit') Войти
+            span.clearfix
+            a.js-open-modal.form(href=0, data-modal="2") Зарегистрироваться
+        #message
+          if message
+            h1 #{message}
+
+      div.modal(data-modal="2")
+        p.modal__cross.js-modal-close Закрыть
+        p.modal_title Зарегистрироваться
+        div.signup
+          form(class='form-signin', action='/signup', method='POST')
+            input(type='text', name='username', placeholder='Логин', required, autofocus)
+            input(type='password', name='password', placeholder='Пароль', required)
+            input(type='email', name='email', placeholder='E-mail',required)
+            button(class='btn btn-lg btn-primary btn-block', type='submit') Зарегистрироваться
+            span.clearfix
+        #message
+          if message
+            h1 #{message}
+
+      div.overlay.js-overlay-modal
+
+        p &copy; LilChara 2020
+
+    script(src='/javascripts/modal.js')
