--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -133,6 +133,10 @@ button {
   color: #000;
 }
 
-.js-open-modal.form {
+input[type="submit"] {
   font-size: 20px;
+  font-family: DigitallCG;
+  box-shadow: none;
+  outline: none;
+  border: none;
 }
