--- a/views/index.pug
+++ b/views/index.pug
@@ -19,9 +19,9 @@ html(lang="ru")
         form( action='/login', method='POST')
           input(type='text', name='username', placeholder='Логин', required, autofocus)
           input(type='password', name='password', placeholder='Пароль', required)
-          button.js-open-modal.form(type='submit') Войти
+          input(class ='js-open-modal', type='submit', value='Войти')
           span.clearfix
-          a.js-open-modal.form(href=0, data-modal="2") Зарегистрироваться
+          a.js-open-modal(href=0, data-modal="2") Зарегистрироваться
       #message
         if message
           h1 #{message}
@@ -34,7 +34,7 @@ html(lang="ru")
           input(type='text', name='username', placeholder='Логин', required, autofocus)
           input(type='password', name='password', placeholder='Пароль', required)
           input(type='email', name='email', placeholder='E-mail',required)
-          button.js-open-modal.form(class='btn btn-lg btn-primary btn-block', type='submit') Зарегистрироваться
+          input(class='js-open-modal', type='submit', value='Зарегистрироваться')
           span.clearfix
       #message
         if message
