--- a/views/index.pug
+++ b/views/index.pug
@@ -16,7 +16,7 @@ html(lang="ru")
       p.modal__cross.js-modal-close Закрыть
       p.modal_title Войти?
       div.login
-        form( action='/login', method='POST')
+        form( action='login', method='POST')
           input(type='text', name='username', placeholder='Логин', required, autofocus)
           input(type='password', name='password', placeholder='Пароль', required)
           input(class ='js-open-modal-button', type='submit', value='Войти')
@@ -30,7 +30,7 @@ html(lang="ru")
       p.modal__cross.js-modal-close Закрыть
       p.modal_title Зарегистрироваться
       div.signup
-        form(action='/passport/signup.js', method='POST')
+        form(action='signup', method='POST')
           input(type='text', name='username', placeholder='Логин', required, autofocus)
           input(type='password', name='password', placeholder='Пароль', required)
           input(type='email', name='email', placeholder='E-mail',required)
