--- a/views/register.pug
+++ b/views/register.pug
@@ -2,16 +2,15 @@ extends layout
 
 block content
 	div
-		div
+		h1 Регистрация
 			div
-				h1 Registration Details
-					div
-						form(class='form-signin', action='/signup', method='POST')
-							input(type='text', name='username', placeholder='Username', required, autofocus)
-							input(type='password', name='password', placeholder='Password', required)
-							input(type='email', name='email', placeholder='Email',required)
-							button(class='btn btn-lg btn-primary btn-block', type='submit') Register
-							span.clearfix
-					#message
-						if message
-							h1 #{message}
+				form(class='form-signin', action='/signup', method='POST')
+					input(type='text', name='username', placeholder='Логин', required, autofocus)
+					input(type='password', name='password', placeholder='Пароль', required)
+					input(type='email', name='email', placeholder='E-mail',required)
+					button(class='btn btn-lg btn-primary btn-block', type='submit') Зарегистрироваться
+					span.clearfix
+				#message
+					if message
+						h1 #{message}
+			a.index(href="http://ncitylab.com") На главную
