--- a/views/home.pug
+++ b/views/home.pug
@@ -1,13 +1,17 @@
-extends layout
+doctype html
+html(lang="ru")
+	head
+		meta(charset="UTF-8")
+		link(type="text/css" rel="stylesheet" href="/stylesheets/sign.css")
+		title= "Домашняя страница"
 
-block content
-	div
-		div
-			div
-				#user
-					h1 Welcome #{user.firstName}. Check your details below:
-						div
-							ul
-								li Username ---> #{user.username}
-								li Email    ---> #{user.email}
-						a(href='/signout', class='text-center new-account') Sign Out
+	body
+		div.main-block
+			h1 Домашняя страница
+				div
+					#user
+					h3 Добро пожаловать, #{user.username}. Подробности аккаунта
+					p Логин #{user.username}
+					p E-mail #{user.email}
+			a.to-main(href="http://ncitylab.com") Вернуться на главную
+			a.to-main(href='/signout') Выйти
