--- a/views/home.pug
+++ b/views/home.pug
@@ -7,8 +7,8 @@ html(lang="ru")
 
 	body
 		div.main-block
-			h1 Домашняя страница
-				div
+			h1.text Домашняя страница
+				div.text
 					#user
 					h3 Добро пожаловать, #{user.username}. Подробности аккаунта
 					p Логин #{user.username}
