--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,9 @@ html(lang="ru")
 
   body
     div.main-block
-      #username
+      #user
+        if user
+          p #{user.username}
       a.js-open-modal(href=0, data-modal="1") Войти
       a.js-open-modal(href=0, data-modal="2") Зарегистрироваться
       a.faq(href="http://ncitylab.com/faq") FAQ
