--- a/views/index.pug
+++ b/views/index.pug
@@ -11,9 +11,11 @@ html(lang="ru")
       #user
         if user
           p #{user.username}
-      a.js-open-modal(href=0, data-modal="1") Войти
-      a.js-open-modal(href=0, data-modal="2") Зарегистрироваться
-      a.faq(href="http://ncitylab.com/faq") FAQ
+        else
+          div.main-block
+            a.js-open-modal(href=0, data-modal="1") Войти
+            a.js-open-modal(href=0, data-modal="2") Зарегистрироваться
+            a.faq(href="http://ncitylab.com/faq") FAQ
 
     div.modal(data-modal="1")
       p.modal__cross.js-modal-close Закрыть
