Исправлены ссылки с абсолютных на относительные; удалена тестовая страница.

--- a/views/login.pug
+++ b/views/login.pug
@@ -17,4 +17,4 @@ html(lang="ru")
 					#message
 						if message
 							h3 #{message}
-				a.to-main(href="http://ncitylab.com") Вернуться на главную
+				a.to-main(href="/") Вернуться на главную
