--- a/views/register.pug
+++ b/views/register.pug
@@ -18,4 +18,4 @@ html(lang="ru")
 					#message
 						if message
 							h1 #{message}
-				a.to-main(href="http://ncitylab.com") Вернуться на главную
+				a.to-main(href="/") Вернуться на главную
