--- a/views/faq.pug
+++ b/views/faq.pug
@@ -10,7 +10,7 @@ html(lang="ru")
     div.main-block
 
       div.menu
-        a.index(href="http://ncitylab.com") На главную
+        a.index(href="/") На главную
         a.js-open-modal(href=0, data-modal="1") Войти
         a.js-open-modal(href=0, data-modal="2") Зарегистрироваться
 
