--- a/views/home.pug
+++ b/views/home.pug
@@ -13,5 +13,5 @@ html(lang="ru")
 					h3 Добро пожаловать, #{user.username}. Подробности аккаунта
 					p Логин #{user.username}
 					p E-mail #{user.email}
-			a.to-main(href="http://ncitylab.com") Вернуться на главную
+			a.to-main(href="/") Вернуться на главную
 			a.to-main(href='/signout') Выйти
