--- a/views/index.pug
+++ b/views/index.pug
@@ -15,7 +15,7 @@ html(lang="ru")
           div.main-block
             a.js-open-modal(href=0, data-modal="1") Войти
             a.js-open-modal(href=0, data-modal="2") Зарегистрироваться
-            a.faq(href="http://ncitylab.com/faq") FAQ
+            a.faq(href="/faq") FAQ
 
     div.modal(data-modal="1")
       p.modal__cross.js-modal-close Закрыть
